# llm_workshop

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
module_01/: 02_getting_started.ipynb  03_explore_transformers.ipynb  sherlock_homes.txt
module_01/solutions/: 02_getting_started.ipynb  03_explore_transformers.ipynb  norm_corpus.txt
module_02/: 02_simple_text_generator.ipynb
module_02/solutions/: 02_simple_text_generator.ipynb
module_03/: 01_llm_training_and_scaling.ipynb  02_instruction_tuning_llama_t2sql.ipynb  03_RLHF_phi2.ipynb
module_03/solutions/: 01_llm_training_and_scaling.ipynb  utils.py
module_04/: 01_prompt_engineeering_and_langchain.ipynb  02_vector_databases_hf_inference_endpoint.ipynb  03_OpenSource_ClosedSource_LLMs.ipynb  04_retrieval_augmented_llm_app.ipynb  05_dspy_demo.ipynb  06_supercharge_llm_apps.ipynb  app.py  constants.py  llm_material.txt  scraper_utils.py  utils.py
