[tool.poetry]
name = "llm-workshop"
version = "0.1.0"
description = "LLM Workshop 2024"
authors = ["raghavbali <bali.raghav@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"
torch = "^2.3.1"
transformers = "^4.42.3"
torchtext = "^0.18.0"
gensim = "^4.3.2"
jupyterlab = "^4.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
