[tool.poetry]
name = "llm-workshop"
version = "0.1.0"
description = "LLM Workshop 2024"
authors = ["raghavbali <bali.raghav@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"
torch = "^2.3.1"
transformers = "^4.42.3"
torchtext = "^0.18.0"
gensim = "^4.3.2"
jupyterlab = "^4.2.3"
jupyter = "^1.0.0"
nltk = "^3.8.1"
scikit-learn = "^1.5.1"
scipy = "1.12"
scienceplots = "^2.1.1"
fasttext = "^0.9.3"
datasets = "^2.20.0"
accelerate = "^0.33.0"
peft = "^0.12.0"
trl = "^0.9.6"
tensorboardx = "^2.6.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
