[tool.poetry]
name = "llm-workshop"
version = "0.1.0"
description = "LLM Workshop 2024 by raghavbali.github.io"
authors = ["raghavbali <bali.raghav@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"
torch = "^2.3.1"
transformers = "^4.42.3"
torchtext = "^0.18.0"
gensim = "^4.3.2"
jupyterlab = "^4.2.3"
jupyter = "^1.0.0"
nltk = "^3.8.1"
scikit-learn = "^1.5.1"
scipy = "1.12"
scienceplots = "^2.1.1"
fasttext = "^0.9.3"
datasets = "^2.20.0"
accelerate = "^0.33.0"
peft = "^0.12.0"
trl = "^0.9.6"
tensorboardx = "^2.6.2.2"
gpt4all = "^2.7.0"
ollama = "^0.3.1"
dspy-ai = "2.4.10"
langchain = "^0.2.12"
langchain-community = "^0.2.11"
langchain-openai = "^0.1.20"
chromadb = "^0.5.5"
openai = "^1.38.0"
streamlit = "^1.37.0"
retry = "^0.9.2"
sentence-transformers = "^3.0.1"
langchainhub = "^0.1.20"
watchdog = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
